<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/new_customer_checkout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/welcome_please_sign_in"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/new_customer"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/by_creating_an_account_on_our_website_you_will_be_able_to_shop_faster_be_up_to_date_on_an_orders_status_and_keep_track_of_the_orders_you_have_previously_made" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/guest_checkout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/checkout_as_a_guest_or_register"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/register_and_save_time"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/register_with_us_for_future_convenience_fast_and_easy_check_out_easy_access_to_your_order_history_and_status" />

        <Button
            android:id="@+id/guest_checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:background="@color/differentButtonColor"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/checkout_as_guests"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>


    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:background="@color/differentButtonColor"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:padding="5dp"
        android:text="@string/returning_customer"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:background="@color/primaryDark"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</LinearLayout>