<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgRootLayoutColor"
    android:orientation="vertical">

    <include layout="@layout/toolbar_custom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_toolbar"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/et_new_base_url"
            style="@style/formEditTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_base_url" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/example_http_yourstore_com"
            android:textColor="@color/textSecondarColor" />

        <Button
            android:id="@+id/btn_test_url"
            style="@style/customButton"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_your_api" />


        <Button
            android:id="@+id/btn_main_url"
            style="@style/customButton"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_layout_orange"
            android:text="@string/use_existing_api" />

    </LinearLayout>
</RelativeLayout>