<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <com.rey.material.widget.TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/cantact_us"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/shop1"
    android:textColor="@color/primary"
    tools:text="@string/shop1"
    android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|right"
        android:layoutDirection="rtl"
        android:layout_marginTop="@dimen/linear_top_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_location" />

        <com.rey.material.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="@string/address_cantact_us1"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|right"
        android:layout_marginTop="@dimen/linear_top_margin"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_tell" />

        <com.rey.material.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:gravity="right"
            android:text="@string/tell_cantact_us1"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop2"
        android:textColor="@color/primary"
        tools:text="@string/shop2"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|right"
        android:layoutDirection="rtl"
        android:layout_marginTop="@dimen/linear_top_margin"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_location" />

        <com.rey.material.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="@string/address_cantact_us2"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|right"
        android:layout_marginTop="@dimen/linear_top_margin"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_tell" />

        <com.rey.material.widget.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:gravity="right"
            android:text="@string/tell_cantact_us2"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|right"
        android:layout_marginTop="@dimen/linear_top_margin"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_email" />

        <com.rey.material.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:autoLink="all"
            android:gravity="left"
            android:text="@string/email_cantact_us"
            android:textSize="15sp" />
    </LinearLayout>



</LinearLayout>