<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgRootLayoutColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:text="@string/please_give_email"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="-4dp"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:src="@drawable/ic_account_circle_black_36dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etForgetEmail"
                style="@style/formEditTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email" />

        </LinearLayout>


        <Button
            android:id="@+id/forgetSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_corner_layout_primary"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>
</RelativeLayout>